fea: 增加 JWT 认证
